# ros2-pipeline-profiler

./: .clangd  .gitignore  CMakeLists.txt  README.md  package.xml
benchmark/: README.md  diagnose.sh  run_benchmark.py
benchmark_results/: SUMMARY.md  compare_report.html  findings.md  index.md  qos_heatmap.html
benchmark_results/01_dds_comparison/: findings.md
benchmark_results/02_qos_heatmap/: findings.md
benchmark_results/03_bottleneck_diagnosis/: drops_results.json  findings.md
benchmark_results/04_threading_fix/: findings.md
benchmark_results/rmw_cyclonedds_cpp/best_effort_depth_10/run_1/: profiler_processing_node_20260624_130318.csv  profiler_sensor_node_20260624_130318.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/best_effort_depth_10/run_2/: profiler_processing_node_20260624_130334.csv  profiler_sensor_node_20260624_130334.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/best_effort_depth_100/run_1/: profiler_processing_node_20260624_130350.csv  profiler_sensor_node_20260624_130350.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/best_effort_depth_100/run_2/: profiler_processing_node_20260624_130406.csv  profiler_sensor_node_20260624_130406.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/reliable_depth_10/run_1/: profiler_control_node_20260624_130215.csv  profiler_processing_node_20260624_130215.csv  profiler_sensor_node_20260624_130215.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/reliable_depth_10/run_2/: profiler_control_node_20260624_130231.csv  profiler_processing_node_20260624_130231.csv  profiler_sensor_node_20260624_130231.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/reliable_depth_100/run_1/: profiler_control_node_20260624_130246.csv  profiler_processing_node_20260624_130246.csv  profiler_sensor_node_20260624_130246.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/reliable_depth_100/run_2/: profiler_control_node_20260624_130302.csv  profiler_processing_node_20260624_130302.csv  profiler_sensor_node_20260624_130302.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/run_1/: profiler_control_node_20260624_123548.csv  profiler_processing_node_20260624_123548.csv  profiler_sensor_node_20260624_123548.csv  report.html  results.json
benchmark_results/rmw_cyclonedds_cpp/run_2/: profiler_control_node_20260624_123609.csv  profiler_processing_node_20260624_123609.csv  profiler_sensor_node_20260624_123609.csv  report.html  results.json
benchmark_results/rmw_fastrtps_cpp/best_effort_depth_10/run_1/: profiler_processing_node_20260624_130111.csv  profiler_sensor_node_20260624_130111.csv  report.html  results.json
benchmark_results/rmw_fastrtps_cpp/best_effort_depth_10/run_2/: profiler_control_node_20260624_130127.csv  profiler_processing_node_20260624_130127.csv  profiler_sensor_node_20260624_130127.csv  report.html  results.json
benchmark_results/rmw_fastrtps_cpp/best_effort_depth_100/run_1/: profiler_processing_node_20260624_130143.csv  profiler_sensor_node_20260624_130143.csv  report.html  results.json
benchmark_results/rmw_fastrtps_cpp/best_effort_depth_100/run_2/: profiler_processing_node_20260624_130159.csv  profiler_sensor_node_20260624_130159.csv  report.html  results.json
benchmark_results/rmw_fastrtps_cpp/reliable_depth_10/run_1/: profiler_control_node_20260624_130008.csv  profiler_processing_node_20260624_130008.csv  profiler_sensor_node_20260624_130008.csv  report.html  results.json
benchmark_results/rmw_fastrtps_cpp/reliable_depth_10/run_2/: profiler_control_node_20260624_130024.csv  profiler_processing_node_20260624_130024.csv  profiler_sensor_node_20260624_130024.csv  report.html  results.json
benchmark_results/rmw_fastrtps_cpp/run_1/: profiler_control_node_20260624_123506.csv  profiler_processing_node_20260624_123506.csv  profiler_sensor_node_20260624_123506.csv  report.html  results.json
benchmark_results/rmw_fastrtps_cpp/run_2/: profiler_control_node_20260624_123527.csv  profiler_processing_node_20260624_123527.csv  profiler_sensor_node_20260624_123527.csv  report.html  results.json
include/ros2_pipeline_profiler/: event_logger.hpp  profiler_common.hpp  profiler_publisher.hpp  profiler_publisher_impl.hpp  profiler_subscriber.hpp  profiler_subscriber_impl.hpp
launch/: demo.launch.py
msg/: ProfilerEnvelope.msg
python/: setup.py
python/ros2_pipeline_profiler_analyzer/: README.md  analyzer.py  cli.py  comparator.py  heatmap.py  reader.py  visualizer.py
python/ros2_pipeline_profiler_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: event_logger.cpp  main.cpp  profiler_common.cpp
src/demo/: control_node.cpp  processing_node.cpp  sensor_node.cpp
(+10 files in other folders)
